# routes/attendance.js
@@ -2,7 +2,7 @@ import express from "express"
 const router = express.Router()
 import { addAttendance, getAttendanceByDate } from "../controllers/attendance.js";
 
-router.post("/", addAttendance)
-router.get("/", getAttendanceByDate)
+router.post("/", /* #swagger.tags = ['Attendance'] */ addAttendance)
+router.get("/", /* #swagger.tags = ['Attendance'] */ getAttendanceByDate)
 
 export default router;
