# routes/inquiry.js
@@ -2,7 +2,7 @@ import express from "express"
 import { createInquiry, getInquiry } from "../controllers/inquiry.js"
 const router = express.Router()
 
-router.post("/", createInquiry)
-router.get("/", getInquiry)
+router.post("/", /* #swagger.tags = ['Inquiry'] */ createInquiry)
+router.get("/", /* #swagger.tags = ['Inquiry'] */ getInquiry)
 
 export default router
