# routes/testimonials.js
@@ -3,7 +3,7 @@ const router = express.Router()
 
 import { createTestimonial, getTestimonials } from "../controllers/testimonials.js"
 
-router.post("/", createTestimonial)
-router.get("/", getTestimonials)
+router.post("/", /* #swagger.tags = ['Testimonials'] */ createTestimonial)
+router.get("/", /* #swagger.tags = ['Testimonials'] */ getTestimonials)
 
 export default router
